--- a/index.html
+++ b/index.html
@@ -65,72 +65,72 @@
 
 
 
-      <div class="col-lg-9 pb-3">
+      <div class="col-lg-9 col-md-10 col-sm-12">
 
         <section id="today" class="mt-3 container-border" role="region" aria-live="polite">
 
-          <h1 id="selected-city-heading"><img id="todays-icon"></h1>Temp:
-          <h2 id="selected-city-temp"> </h2>Wind:
-          <h2 id="selected-city-wind"> </h2>Humidity:
+          <h1 id="selected-city-heading"><img id="todays-icon"></h1> Temp:
+          <h2 id="selected-city-temp"> </h2> Wind:
+          <h2 id="selected-city-wind"> </h2> Humidity:
           <h2 id="selected-city-humidity"> </h2>
         </section>
 
 
         <h2>5-day Forecast:</h2>
 
-        <section id="forecast" class="row mt-3 hide" role="region" aria-live="polite">
+        <section id="forecast" role="region" aria-live="polite">
 
-          <div class="card text-white bg-dark mb-3 day-forecast" style="max-width: 18rem">
+          <div class="day-forecast">
             <div class="card-header" id="day-one-date"> Day 1</div>
             <div class="card-body">
-              <img class="weather-image" />
-              <p id="day-one-temp"></p>
-              <p id="day-one-wind"></p>
+              <img class="weather-image" />Temp:
+              <p id="day-one-temp"></p>Wind:
+              <p id="day-one-wind"></p>Humidity
               <p id="day-one-humidity"></p>
             </div>
           </div>
 
 
-          <div class="card text-white bg-dark mb-3 day-forecast" style="max-width: 18rem">
+          <div class=" day-forecast">
             <div class="card-header" id="day-one-date"> Day 2</div>
             <div class="card-body">
-              <img class="weather-image" />
-              <p id="day-one-temp"></p>
-              <p id="day-one-wind"></p>
+              <img class="weather-image" />Temp:
+              <p id="day-one-temp"></p>Wind:
+              <p id="day-one-wind"></p>Humidity:
               <p id="day-one-humidity"></p>
             </div>
           </div>
 
 
-          <div class="card text-white bg-dark mb-3 day-forecast" style="max-width: 18rem">
+          <div class=" day-forecast">
             <div class="card-header" id="day-three-date"> Day 3</div>
             <div class="card-body">
-              <img class="weather-image" />
-              <p id="day-three-temp"></p>
-              <p id="day-three-wind"></p>
+              <img class="weather-image" />Temp:
+              <p id="day-three-temp"></p>Wind:
+              <p id="day-three-wind"></p>Humidity:
               <p id="day-three-humidity"></p>
             </div>
           </div>
 
 
 
-          <div class="card text-white bg-dark mb-3 day-forecast" style="max-width: 18rem">
+          <div class=" day-forecast">
             <div class="card-header" id="day-four-date"> Day 4</div>
             <div class="card-body">
-              <img class="weather-image" />
-              <p id="day-four-temp"></p>
-              <p id="day-four-wind"></p>
+              <img class="weather-image" />Temp:
+              <p id="day-four-temp"></p>Wind:
+              <p id="day-four-wind"></p>Humidity:
               <p id="day-four-humidity"></p>
             </div>
           </div>
 
 
-          <div class="card text-white bg-dark mb-3 day-forecast" style="max-width: 18rem">
+          <div class=" day-forecast">
             <div class="card-header" id="day-five-date"> Day 5</div>
             <div class="card-body">
-              <img class="weather-image" />
-              <p id="day-five-temp"></p>
-              <p id="day-five-wind"></p>
+              <img class="weather-image" />Temp:
+              <p id="day-five-temp"></p>Wind:
+              <p id="day-five-wind"></p>Humidity:
               <p id="day-five-humidity"></p>
             </div>
           </div>
